# promethee

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.garage-init  README.md  README_IMPLEMENTATIONS.md  SYSTEM_DEPENDENCIES.md  docker-compose.yml  env.example  garage.toml  logview.py  main.py  main_telegram.py  package-lock.json  prompts.yml  pyproject.toml  rc_circuit.py  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
core/: __init__.py  config.py  context_manager.py  crypto.py  database.py  llm_clients.py  llm_events.py  llm_logging.py  llm_service.py  long_term_memory.py  ocr_engine.py  rag_engine.py  request_context.py  session_memory.py  skill_manager.py  tools_engine.py  user_config.py  user_manager.py  virtual_fs.py
data/programmes_eduscol/: README.md
documentation/: MIGRATION.md  logview_documentation.docx
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/admin/: AdminPanel.tsx  IngestPanel.tsx
frontend/src/components/auth/: LoginScreen.tsx
frontend/src/components/chat/: ArtifactPanel.tsx  ChatInput.tsx  ChatPanel.tsx  EChartsBlock.tsx  MermaidBlock.tsx  MessageBubble.tsx  MetricsBar.tsx
frontend/src/components/profiles/: ProfilesPanel.tsx
frontend/src/components/projects/: ProjectsPanel.tsx
frontend/src/components/rag/: RagPanel.tsx
frontend/src/components/settings/: SettingsDialog.tsx  SettingsUI.tsx  TabApiKeys.tsx  TabModel.tsx  TabOutils.tsx  TabsExtra.tsx
frontend/src/components/sidebar/: ConfirmModal.tsx  ConvItem.tsx  ConvSidePanel.tsx  DiscussionsPanel.tsx  SidebarFooter.tsx  SidebarRail.tsx  sidebarStyles.ts
frontend/src/components/tools/: ToolsPanel.tsx
frontend/src/components/ui/: ThemeSwitch.tsx  icons.tsx
frontend/src/components/vfs/: VfsPanel.tsx
frontend/src/hooks/: useAgentStream.ts  useArtifactPanel.ts  useAuth.ts  useConversationTree.ts  useSettings.ts  useSplitPane.ts
frontend/src/lib/: api.ts  markdownToHtml.ts  useTheme.ts
frontend/src/styles/: theme.css
scripts/: download_katex.py  download_mermaid.py  ingest3.py  logview.py
server/: WS_PROTOCOL.md  deps.py  main.py  requirements_server.txt  schemas.py
server/routers/: __init__.py  admin.py  auth.py  conversations.py  ingest_admin.py  monitoring.py  profiles_skills.py  rag.py  settings.py  tools_router.py  upload.py  vfs_router.py  ws_chat.py
skills/: guide_creation_powerpoint.md  guide_datagouv.md  guide_export_docx_pdf.md  guide_grist.md  guide_imap.md  guide_mermaid.md  guide_ocr.md  guide_redacteur.md  guide_redactionnel_administratif.md  guide_sql.md  guide_utilisation_templates.md  guide_visualisation.md  guide_web_tools.md  skill_tool_creator.md  workflow_legifrance.md
tests/: test_rag_engine.py
tools/: __init__.py  chemistry_tools.py  curriculum_tools.py  data_file_tools.py  data_tools.py  datagouv_tools.py  docs_tools.py  export_template_tools.py  export_tools.py  grist_tools.py  imap_tools.py  judilibre_tools.py  legifrance_tools.py  lms_tools.py  meteo_tools.py  ocr_tools.py  physics_tools.py  python_tools.py  reformulation_tools.py  skill_tools.py  sql_tools.py  tool_creator_tools.py  vfs_tools.py  web_tools.py
ui/: app.py  main_window.py  splash_screen.py  workers.py
ui/dialogs/: __init__.py  about_dialog.py  ltm_dialog.py  settings_dialog.py
ui/panels/: __init__.py  model_usage_panel.py  monitoring_panel.py  rag_panel.py  tools_panel.py
ui/panels/chat/: chat_panel.py  streaming_handler.py  viewport_manager.py
ui/widgets/: __init__.py  attachment_widget.py  conversation_sidebar.py  mermaid_renderer.py  message_widget.py  pdf_viewer.py  scroll_helper.py  styles.py  url_cache.py
ui/widgets/themes/: base.qss.tpl  tokens.py
